# find-test

./: Собеседование.sublime-project  Собеседование.sublime-workspace
solution_1/: CMakeLists.txt  README.md  input.txt  mtfind1.sln
solution_1/include/: MtFind.h  ThreadPool.h
solution_1/mtfind.xcodeproj/: project.pbxproj
solution_1/mtfind.xcodeproj/project.xcworkspace/xcuserdata/agaltsevstas.xcuserdatad/: UserInterfaceState.xcuserstate
solution_1/mtfind.xcodeproj/xcshareddata/xcschemes/: mtfind.xcscheme
solution_1/mtfind.xcodeproj/xcuserdata/agaltsevstas.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
solution_1/mtfind.xcodeproj/xcuserdata/agaltsevstas.xcuserdatad/xcschemes/: xcschememanagement.plist
solution_1/mtfind1/: mtfind1.vcxproj  mtfind1.vcxproj.filters
solution_1/src/: CMakeLists.txt  MtFind.cpp  main.cpp
solution_2/: CMakeLists.txt
solution_2/include/: mask_key.hpp  worker.hpp
solution_2/src/: main.cpp  worker.cpp
solution_3/: CMakeLists.txt
solution_3/libs/: CMakeLists.txt
solution_3/libs/csp/: Accountant.cpp  CMakeLists.txt  Worker.cpp
solution_3/libs/csp/include/csp/: Accountant.h  FileReader.h  Worker.h  WorkerPool.h  exceptions.h  utils.h
solution_3/src/: InputOptions.h  main.cpp
solution_3/tests/: CMakeLists.txt  csp_tests.cpp
solution_4/: CMakeLists.txt
solution_4/tz_mtfind/: CMakeLists.txt
solution_4/tz_mtfind/include/: stringfinder.h  tz_mtfind.h
solution_4/tz_mtfind/src/: stringfinder.cpp  tz_mtfind.cpp
solution_5/: CMakeLists.txt  Readme.md  build.sh  buildWithCMake.sh
solution_5/src/: MatchSearchParams.h  MatchSearchResult.h  MatchSearcher.cpp  MatchSearcher.h  MatchSearcherLauncher.cpp  MatchSearcherLauncher.h  main.cpp
solution_7/: CMakeLists.txt  README.md  abstractsubstringseeker.h  boyermooresubstringseeker.cpp  boyermooresubstringseeker.h  foundsubstringinfo.cpp  foundsubstringinfo.h  foundsubstringinobjectinfo.cpp  foundsubstringinobjectinfo.h  main.cpp  multithreadqueue.h  multithreadsubstringseekerinfile.cpp  multithreadsubstringseekerinfile.h  substringseekerinabstractobject.h  threadpool.cpp  threadpool.h
solution_7/tester/: main.cpp  substringseekertetser.cpp  substringseekertetser.h
solution_7/tests/test2/: answer.txt
solution_7/tests/test3/: answer.txt
solution_7/tests/test4/: answer.txt  input.txt
solution_7/tests/test5/: answer.txt
solution_7/tests/test6/: input.txt
solution_7/tests/test7/: answer.txt
solutoin_6/: CMakeLists.txt
